# Comprehension-opensource

./: .env.example  .gitignore  README.md  pyproject.toml
intent dataset/campus_net/: intent_campus.xlsx  protect_campus.xlsx
intent dataset/cloud_net/: intent_cloud.xlsx  protect_cloud.xlsx
intent dataset/extreme/: intent_extreme.xlsx  protect_extreme.xlsx
network/campus_net/: campus_net.graphml  campus_net_dictionary.py  create_campus_net.py
network/cloud_net/: cloud_net.graphml  cloud_net_dictionary.py  create_cloud_net.py
network/extreme_net/: create_extreme_net.py  extreme_net.graphml  extreme_net_dictionary.py
prompts/: prompt_baseline.txt  prompt_basic.txt  prompt_iterative.txt  prompt_protect.txt  prompt_protect_iterative.txt  prompt_without_examples.txt  prompt_without_instructions.txt  prompt_without_verification.txt
scripts/: prepare_manual_review.py  run_eval.py  run_feedback.py  score_results.py
snmt/: SNMT_campus_net.txt  SNMT_cloud_net.txt  SNMT_extreme_net.txt
src/seraph_intent_comprehension/: __init__.py  __main__.py  cli.py  clients.py  config.py  datasets.py  evaluators.py  feedback.py  postprocess.py  prompts.py
tests/: test_regression_equivalence.py
